--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивное программирование или жизнь</title>
+    <link rel="shortcut icon" href="static/img/logo_placeholder.svg" type="image/x-icon" />
     <link rel="stylesheet" href="static/css/main.css"/>
 </head>
 <body>
