--- a/cp-platforms.html
+++ b/cp-platforms.html
@@ -22,20 +22,20 @@
     <nav class="nav">
         <a href="main.html"><span class="nav-el hli">Главная</span></a>
         <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
+        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
         <img src="static/img/codeforces.svg" class="disp"/>
         <div class="bio-text">
             <h2>Codeforces</h2>
-            <p>Геннадий Короткевич родился 25 сентября 1994 года в Гомеле. Его родители преподавали на кафедре математических проблем управления Гомельского государственного университета им. Франциска Скорины. Учился маленький Гена в гимназии № 56, в начальных классах уже писал первые программы. Во втором классе Короткевич стал призёром республиканской олимпиады.</p>
+            <p>Цель Codeforces это предложить удобную платформу для создания, проведения и обсуждения соревнований по программированию. Это будет немножко социальная сеть, больше чем новостной портал и больше чем online judge. Вы можете самостоятельно подготовить и провести соревнование. Вы сами решите, будет оно открыто для всего мира или будет локальным соревнованием вашего университета. Ну а если вам это не интересно, то я предлагаю совместно обсуждать новости в мире соревнований -  пишите/читайте блоги, обсуждайте статьи, болейте за родных и близких.</p>
         </div>
     </div>
     <div class="element bio">
         <img src="static/img/codechef.svg" class="disp"/>
         <div class="bio-text">
             <h2>Codechef</h2>
-            <p>Ещё в школе Геннадий Короткевич показывал выдающиеся результаты. В пятом классе он впервые вышел на IOI и получил там серебро. С шестого по одиннадцатый класс Короткевич брал только золото, причём в восьмом, девятом и десятом был абсолютным победителем. Также Геннадий участвовал во ВКОШПе, где его команда один раз взяла серебряную медаль и четыре раза становилась первой.</p>
+            <p>CodeChef был создан как платформа, помогающая программистам добиться успеха в мире алгоритмов, компьютерного программирования и соревнований по программированию. Команда прилагает все усилия, чтобы возродить в вас гика с помощью соревновательного программирования.</p>
         </div>
     </div>
     <div class="element bio">
