--- a/hist1.html
+++ b/hist1.html
@@ -22,7 +22,7 @@
     <nav class="nav">
         <a href="main.html"><span class="nav-el hli">Главная</span></a>
         <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
+        <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
         <img src="static/img/tourist-child.jpg" class="disp"/>
