--- a/cp-platforms.html
+++ b/cp-platforms.html
@@ -42,14 +42,14 @@
         <img src="static/img/atcoder.svg" class="disp"/>
         <div class="bio-text">
             <h2>Atcoder</h2>
-            <p>В 2012 Короткевич поступил на КТ ИТМО. Тренером по спортивному программированию для него стал Андрей Станкевич. В зависимости от типа соревнования Геннадий участвует одиночно как представитель Белоруссии или в команде университета. В 2013 и 2015 году команда Короткевича занимает первое место на ACM ICPC. Также Геннадий побеждал в различных соревнованиях от IT-компаний, таких как Яндек.Алгоритм, VK cup, Google Code Jam, Facebook Hacker Cup, Topcoder Open, 8VC Venture Cup и пр.</p>
+            <p>AtCoder — это сайт соревнований по программированию для всех, от новичков до экспертов. На нём проводятся еженедельные онлайн-соревнования по программированию. Каждый контест разделён на дивизионы — рейтинговая группа каждого участника</p>
         </div>
     </div>
     <div class="element bio" class="disp">
         <img src="static/img/leetcode.svg"/>
         <div class="bio-text">
             <h2>Leetcode</h2>
-            <p>Сейчас Геннадий Короткевич продолжает участвовать в соревнованиях по спортивному программированию на codeforces.com, atcoder.jp, topcoder.com, codechef.com и других сайтах.</p>
+            <p>LeetCode — это платформа для технических навыков и подготовки к собеседованию, которую студенты, профессиональные программисты и работодатели используют для изучения, практики и оценки навыков кодирования и программирования.</p>
         </div>
     </div>
     <footer class="footer">
