--- a/about-us.html
+++ b/about-us.html
@@ -49,7 +49,7 @@
         <img src="static/img/ivanbel.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Иван Белозёров</h2>
-            <p><i>Дизайнер. Единственный, кто что-то делал.</i></p>
+            <p><i>Сперва Inter освой</i></p>
         </div>
     </div>
     <footer class="footer">
