--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" onclick="PlaySound()">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,18 +16,17 @@
     <header class="header">
         <span class="title hli">
             <img src="static/img/KIS.svg" class="disp"/>
-            <b><a onclick="PlaySound()" href="#">Спортивное программирование или жизнь</a></b>
+            <b><a href="#">Спортивное программирование или жизнь</a></b>
         </span>
     </header>
     <nav class="nav">
-        <a onclick="PlaySound()" href="#"><span class="nav-el hli">Главная</span></a>
-        <a onclick="PlaySound()" href="#"><span class="nav-el hli">О нас</span></a>
-        <a onclick="PlaySound()" href="#"><span class="nav-el hli">Контакты</span></a>
+        <a href="#"><span class="nav-el hli">Главная</span></a>
+        <a href="#"><span class="nav-el hli">О нас</span></a>
+        <a href="#"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <video id="qwqw" autoplay muted width="100%" height="100%" style="margin: 0; padding: 0; float:left;">
         <source src="static/video/rickroll.mp4" type="video/mp4">
     </video>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <video autoplay muted width="100%" height="100%" style="margin: 0; padding: 0; float:left;">
         <source src="static/video/rickroll.mp4" type="video/mp4">
     </video>
