--- a/main.html
+++ b/main.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивное программирование или жизнь</title>
-    <link rel="shortcut icon" href="static/img/logo_placeholder.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/img/KIS.svg" type="image/x-icon" />
     <link rel="stylesheet" href="static/css/main.css"/>
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <span class="logo hli"><a href="main.html">
-            <img src="static/img/logo_placeholder.svg"/>
+            <img src="static/img/KIS.svg"/>
         </a></span>
         <span class="title hli">
             <b>Спортивное программирование или жизнь</b>
         </span>
-    </div>
-    <div class="nav">
+    </header>
+    <nav class="nav">
         <a href="main.html"><span class="nav-el hli">Главная</span></a>
         <a href="main.html"><span class="nav-el hli">О нас</span></a>
         <a href="main.html"><span class="nav-el hli">Контакты</span></a>
-    </div>
+    </nav>
     <div class="element">
         <h2>О спортивном программировании</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
@@ -34,15 +34,15 @@
     <div class="element">
         <h2>Личности</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
-        <button type="button" onclick="location.href='main.html';">Читать всё</button>
+        <button type="button" onclick="location.href='hist1.html';">Читать всё</button>
     </div>
     <div class="element">
         <h2>СП во взрослой жизни</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
         <button type="button" onclick="location.href='main.html';">Читать всё</button>
     </div>
-    <div class="footer">
-        <snap class="hli">© Copyright 2023-24 AESC MSU</snap>
-    </div>
+    <footer class="footer">
+        <span class="hli">© Copyright 2023-24 AESC MSU</span>
+    </footer>
 </body>
 </html>
