--- a/hist1.html
+++ b/hist1.html
@@ -19,8 +19,8 @@
     </header>
     <nav class="nav">
         <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="main.html"><span class="nav-el hli">О нас</span></a>
-        <a href="main.html"><span class="nav-el hli">Контакты</span></a>
+        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
+        <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
         <img src="static/img/tourist-photo.jpg"/>
