--- a/main.html
+++ b/main.html
@@ -18,23 +18,23 @@
     </header>
     <nav class="nav">
         <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="main.html"><span class="nav-el hli">О нас</span></a>
-        <a href="main.html"><span class="nav-el hli">Контакты</span></a>
+        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
+        <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element">
         <h2>О спортивном программировании</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
-        <button type="button" onclick="location.href='main.html';">Читать всё</button>
+        <button type="button" onclick="location.href='cp.html';">Читать всё</button>
     </div>
     <div class="element">
         <h2>А нужно ли это?</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
-        <button type="button" onclick="location.href='main.html';">Читать всё</button>
+        <button type="button" onclick="location.href='purpose.html';">Читать всё</button>
     </div>
     <div class="element">
         <h2>Личности</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
-        <button type="button" onclick="location.href='hist1.html';">Читать всё</button>
+        <button type="button" onclick="location.href='personalities.html';">Читать всё</button>
     </div>
     <div class="element">
         <h2>СП во взрослой жизни</h2>
