--- a/hist1.html
+++ b/hist1.html
@@ -9,12 +9,14 @@
     <link rel="stylesheet" href="static/css/hist1.css"/>
 </head>
 <body>
+    <div class="overlay" id="overlay">
+        <img src="none" alt="Full Image" class="full-image" id="fullImage">
+        <span class="close" id="closeBtn">&times;</span>
+    </div>
     <header class="header">
-        <span class="logo hli"><a href="main.html">
-            <img src="static/img/KIS.svg"/>
-        </a></span>
         <span class="title hli">
-            <b>Спортивное программирование или жизнь</b>
+            <img src="static/img/KIS.svg" class="disp"/>
+            <b><a href="main.html">Спортивное программирование или жизнь</a></b>
         </span>
     </header>
     <nav class="nav">
@@ -23,21 +25,21 @@
         <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg"/>
+        <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Ранняя жизнь</h2>
             <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg"/>
+        <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Школьные достижения</h2>
             <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg"/>
+        <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Студенческий период</h2>
             <!--
@@ -47,7 +49,7 @@
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg"/>
+        <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Настоящее время</h2>
             <!--
@@ -59,5 +61,6 @@
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
+    <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 </html>
