--- a/rickroll.html
+++ b/rickroll.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <span class="logo hli"><a href="main.html">
+        <span class="logo hli"><a onclick="PlaySound()" href="#">
             <img src="static/img/KIS.svg"/>
         </a></span>
         <span class="title hli">
@@ -18,16 +18,27 @@
         </span>
     </header>
     <nav class="nav">
-        <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
+        <a onclick="PlaySound()" href="#"><span class="nav-el hli">Главная</span></a>
+        <a onclick="PlaySound()" href="#"><span class="nav-el hli">О нас</span></a>
+        <a onclick="PlaySound()" href="#"><span class="nav-el hli">Контакты</span></a>
     </nav>
-    <video width="320" height="240" controls>
-        <source src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" type="video/mp4">
-        Your browser does not support the video tag.
+    <video id="qwqw" autoplay muted width="100%" height="100%" style="margin: 0; padding: 0; float:left;">
+        <source src="static/video/rickroll.mp4" type="video/mp4">
     </video>
-    </iframe>
-    <footer class="footer">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
+    <video autoplay muted width="100%" height="100%" style="margin: 0; padding: 0; float:left;">
+        <source src="static/video/rickroll.mp4" type="video/mp4">
+    </video>
+    <video autoplay muted width="100%" height="100%" style="margin: 0px; padding: 0; font-size: 0;">
+        <source src="static/video/rickroll.mp4" type="video/mp4">
+    </video>
+    <script>
+        function PlaySound() {
+            var video = document.getElementById("qwqw");
+            video.muted = false;
+        }
+    </script>
+    <footer class="footer" style="margin-top: 0">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
 </body>
