--- a/main.html
+++ b/main.html
@@ -39,9 +39,9 @@
         <button type="button" onclick="location.href='personalities.html';">Читать всё</button>
     </div>
     <div class="element">
-        <h2>СП во взрослой жизни</h2>
+        <h2>Популярные платформы для соревнований по спортивному программированию</h2>
         <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
-        <button type="button" onclick="location.href='main.html';">Читать всё</button>
+        <button type="button" onclick="location.href='cp-platforms.html';">Читать всё</button>
     </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
