raz dva tri kavychki

--- a/hist1.html
+++ b/hist1.html
@@ -9,58 +9,49 @@
     <link rel="stylesheet" href="static/css/hist1.css"/>
 </head>
 <body>
-    <div class="overlay" id="overlay">
-        <img src="none" alt="Full Image" class="full-image" id="fullImage">
-        <span class="close" id="closeBtn">&times;</span>
-    </div>
     <header class="header">
+        <span class="logo hli"><a href="main.html">
+            <img src="static/img/KIS.svg"/>
+        </a></span>
         <span class="title hli">
-            <img src="static/img/KIS.svg" class="disp"/>
-            <b><a href="main.html">Спортивное программирование или жизнь</a></b>
+            <b>Спортивное программирование или жизнь</b>
         </span>
     </header>
     <nav class="nav">
         <a href="main.html"><span class="nav-el hli">Главная</span></a>
-        <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
-        <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
+        <a href="main.html"><span class="nav-el hli">О нас</span></a>
+        <a href="main.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+        <img src="static/img/tourist-child.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Ранняя жизнь</h2>
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>Геннадий Короткевич родился 25 сентября 1994 года в Гомеле. Его родители преподавали на кафедре математических проблем управления Гомельского государственного университета им. Франциска Скорины. Учился маленький Гена в гимназии № 56, в начальных классах уже писал первые программы. Во втором классе Короткевич стал призёром республиканской олимпиады.</p>
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+        <img src="static/img/school.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Школьные достижения</h2>
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>Ещё в школе Геннадий Короткевич показывал выдающиеся результаты. В пятом классе он впервые вышел на IOI и получил там серебро. С шестого по одиннадцатый класс Короткевич брал только золото, причём в восьмом, девятом и десятом был абсолютным победителем. Также Геннадий участвовал во ВКОШПе, где его команда один раз взяла серебряную медаль и четыре раза становилась первой.</p>
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+        <img src="static/img/icpc-square.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Студенческий период</h2>
-            <!--
-            early life, school achievments
-            -->
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>В 2012 Короткевич поступил на КТ ИТМО. Тренером по спортивному программированию для него стал Андрей Станкевич. В зависимости от типа соревнования Геннадий участвует одиночно как представитель Белоруссии или в команде университета. В 2013 и 2015 году команда Короткевича занимает первое место на ACM ICPC. Также Геннадий побеждал в различных соревнованиях от IT-компаний, таких как Яндек.Алгоритм, VK cup, Google Code Jam, Facebook Hacker Cup, Topcoder Open, 8VC Venture Cup и пр.</p>
         </div>
     </div>
-    <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+    <div class="element bio" class="disp">
+        <img src="static/img/tourist-photo.jpg"/>
         <div class="bio-text">
             <h2>Настоящее время</h2>
-            <!--
-            early life, school achievments
-            -->
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>Сейчас Геннадий Короткевич продолжает участвовать в соревнованиях по спортивному программированию на codeforces.com, atcoder.jp, topcoder.com, codechef.com и других сайтах.</p>
         </div>
     </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
-    <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 </html>
