--- a/rickroll.html
+++ b/rickroll.html
@@ -16,7 +16,7 @@
     <header class="header">
         <span class="title hli">
             <img src="static/img/KIS.svg" class="disp"/>
-            <b><a href="main.html">Спортивное программирование или жизнь</a></b>
+            <b><a onclick="PlaySound()" href="#">Спортивное программирование или жизнь</a></b>
         </span>
     </header>
     <nav class="nav">
