--- a/cp-platforms.html
+++ b/cp-platforms.html
@@ -27,31 +27,21 @@
     <div class="element bio">
         <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
-            <h2>Ранняя жизнь</h2>
+            <h2>Codeforces</h2>
             <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
         </div>
     </div>
     <div class="element bio">
         <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
-            <h2>Школьные достижения</h2>
+            <h2>Codechef</h2>
             <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
         </div>
     </div>
     <div class="element bio">
         <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
-            <h2>Студенческий период</h2>
-            <!--
-            early life, school achievments
-            -->
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
-        </div>
-    </div>
-    <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
-        <div class="bio-text">
-            <h2>Настоящее время</h2>
+            <h2>Atcoder</h2>
             <!--
             early life, school achievments
             -->
