--- a/cp-platforms.html
+++ b/cp-platforms.html
@@ -25,27 +25,31 @@
         <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+        <img src="static/img/tourist-child.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Codeforces</h2>
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>Геннадий Короткевич родился 25 сентября 1994 года в Гомеле. Его родители преподавали на кафедре математических проблем управления Гомельского государственного университета им. Франциска Скорины. Учился маленький Гена в гимназии № 56, в начальных классах уже писал первые программы. Во втором классе Короткевич стал призёром республиканской олимпиады.</p>
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+        <img src="static/img/school.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Codechef</h2>
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>Ещё в школе Геннадий Короткевич показывал выдающиеся результаты. В пятом классе он впервые вышел на IOI и получил там серебро. С шестого по одиннадцатый класс Короткевич брал только золото, причём в восьмом, девятом и десятом был абсолютным победителем. Также Геннадий участвовал во ВКОШПе, где его команда один раз взяла серебряную медаль и четыре раза становилась первой.</p>
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/tourist-photo.jpg" class="disp"/>
+        <img src="static/img/icpc-square.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Atcoder</h2>
-            <!--
-            early life, school achievments
-            -->
-            <p>Не следует, однако забывать, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа модели развития. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации существенных финансовых и административных условий. Значимость этих проблем настолько очевидна, что сложившаяся структура организации влечет за собой процесс внедрения и модернизации существенных финансовых и административных условий. С другой стороны реализация намеченных плановых заданий позволяет оценить значение соответствующий условий активизации. С другой стороны рамки и место обучения кадров требуют от нас анализа соответствующий условий активизации.</p>
+            <p>В 2012 Короткевич поступил на КТ ИТМО. Тренером по спортивному программированию для него стал Андрей Станкевич. В зависимости от типа соревнования Геннадий участвует одиночно как представитель Белоруссии или в команде университета. В 2013 и 2015 году команда Короткевича занимает первое место на ACM ICPC. Также Геннадий побеждал в различных соревнованиях от IT-компаний, таких как Яндек.Алгоритм, VK cup, Google Code Jam, Facebook Hacker Cup, Topcoder Open, 8VC Venture Cup и пр.</p>
+        </div>
+    </div>
+    <div class="element bio" class="disp">
+        <img src="static/img/tourist-photo.jpg"/>
+        <div class="bio-text">
+            <h2>Leetcode</h2>
+            <p>Сейчас Геннадий Короткевич продолжает участвовать в соревнованиях по спортивному программированию на codeforces.com, atcoder.jp, topcoder.com, codechef.com и других сайтах.</p>
         </div>
     </div>
     <footer class="footer">
