--- a/hist1.html
+++ b/hist1.html
@@ -45,8 +45,8 @@
             <p>В 2012 Короткевич поступил на КТ ИТМО. Тренером по спортивному программированию для него стал Андрей Станкевич. В зависимости от типа соревнования Геннадий участвует одиночно как представитель Белоруссии или в команде университета. В 2013 и 2015 году команда Короткевича занимает первое место на ACM ICPC. Также Геннадий побеждал в различных соревнованиях от IT-компаний, таких как Яндек.Алгоритм, VK cup, Google Code Jam, Facebook Hacker Cup, Topcoder Open, 8VC Venture Cup и пр.</p>
         </div>
     </div>
-    <div class="element bio" class="disp">
-        <img src="static/img/tourist-photo.jpg"/>
+    <div class="element bio">
+        <img src="static/img/tourist-photo.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Настоящее время</h2>
             <p>Сейчас Геннадий Короткевич продолжает участвовать в соревнованиях по спортивному программированию на codeforces.com, atcoder.jp, topcoder.com, codechef.com и других сайтах.</p>
