--- a/hist2.html
+++ b/hist2.html
@@ -31,3 +31,11 @@
     <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 </html>
+
+<!--
+Евгения Андреева закончила университет с специальностью по вычислительной математике и кибернетике, а потом пошла на аспирантуру в тот же университет. Она имеет степень кандидата физико-математических наук. Она полностью посвятила свою жизнь преподаванию информатики и разработке методик для этого. Она руководит кафедрой информатики в СУНЦ МГУ и написала несколько учебников по информатике. Она также часто была членом жюри на олимпиадах по информатике на разных уровнях. Евгения также является главным тренером сборной команды Москвы по информатике и основала специальный курс «Олимпиадная информатика» в СУНЦ МГУ.
+Свой первый опыт преподавания она получила еще на третьем курсе университета, когда работала преподавателем программирования в вечерней математической школе. Эта работа определила ее дальнейшую карьеру. В 1989 году, когда факультету ВМиК поручили организовать преподавание информатики в интернате имени Колмогорова, Евгения с радостью согласилась помочь. С тех пор ее работа связана с одаренными школьниками.
+Под ее руководством в СУНЦ МГУ был создан электронный задачник по программированию, который помогает эффективно обучать программированию и готовить к соревнованиям. Она также разработала методику использования этого задачника, которая позволяет учителям вести занятия на более высоком уровне.
+Евгения разработала методику подготовки школьников, которые хотят изучать информатику на самом высоком уровне, и она дает хорошие результаты. Многие ее ученики становились победителями олимпиад на всероссийском и международном уровнях. 
+Она была награждена медалью «За вклад в реализацию государственной политики в области образования» Министерством науки и высшего образования Российской Федерации.
+-->
