--- a/about-us.html
+++ b/about-us.html
@@ -24,7 +24,27 @@
         <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
         <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
-    <p1>About Ass</p1>
+    <div class="element bio">
+        <img src="static/img/semen.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Константин Белоусько</h2>
+            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35)</i></p>
+        </div>
+    </div>
+    <div class="element bio">
+        <img src="static/img/semen.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Иван Осокин</h2>
+            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35)</i></p>
+        </div>
+    </div>
+    <div class="element bio">
+        <img src="static/img/semen.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Семён Кухаренко</h2>
+            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35)</i></p>
+        </div>
+    </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
