--- a/about-us.html
+++ b/about-us.html
@@ -32,10 +32,10 @@
         </div>
     </div>
     <div class="element bio">
-        <img src="static/img/semen.jpg" class="disp"/>
+        <img src="static/img/os0kin.png" class="disp"/>
         <div class="bio-text">
             <h2>Иван Осокин</h2>
-            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35)</i></p>
+            <p><i>Марианскую впадину знаешь? Это я упал.</i></p>
         </div>
     </div>
     <div class="element bio">
