--- a/hist2.html
+++ b/hist2.html
@@ -24,18 +24,37 @@
         <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
         <a href="rickroll.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
-    <p1>Hist2</p1>
+    <div class="element bio">
+        <img src="static/img/andreeva1.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Образование и работа</h2>
+            <p>Елена Андреева окончила университет с специальностью по вычислительной математике и кибернетике, а потом пошла на аспирантуру в тот же университет. Она имеет степень кандидата физико-математических наук. Елена Владимировна полностью посвятила свою жизнь преподаванию информатики и разработке методик для этого. Она руководит кафедрой информатики в СУНЦ МГУ и написала несколько учебников по информатике.</p>
+        </div>
+    </div>
+    <div class="element bio">
+        <img src="static/img/andreeva2.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Е. В. в олимпиадах</h2>
+            <p>Елена Владимировна состоит в Московская методической комиссии и является членом жюри на олимпиадах по информатике. Также она является главным тренером сборной команды Москвы по информатике. Свой первый опыт преподавания Елена Владимировна получила еще на третьем курсе университета, когда работала преподавателем программирования в вечерней математической школе. Эта работа определила ее дальнейшую карьеру.</p>
+        </div>
+    </div>
+    <div class="element bio">
+        <img src="static/img/inf-kaf.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>СУНЦ МГУ</h2>
+            <p>В 1989 году, когда факультету ВМиК поручили организовать преподавание информатики в интернате имени Колмогорова, Елена Владимировна с радостью согласилась помочь. С тех пор ее работа связана с одаренными школьниками. Под ее руководством в СУНЦ МГУ был создан электронный задачник по программированию, который помогает эффективно обучать программированию и готовить к соревнованиям. Она также разработала методику использования этого задачника, которая позволяет учителям вести занятия на более высоком уровне.</p>
+        </div>
+    </div>
+    <div class="element bio">
+        <img src="static/img/msu-icpc.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Достижения учеников</h2>
+            <p>Елена Владимировна разработала методику подготовки школьников, которые хотят изучать информатику на самом высоком уровне, и она дает хорошие результаты. Многие ее ученики становились победителями олимпиад на всероссийском и международном уровнях. Она была награждена медалью «За вклад в реализацию государственной политики в области образования» Министерством науки и высшего образования Российской Федерации.</p>
+        </div>
+    </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
     <script type="text/javascript" src="static/js/index.js"></script>
 </body>
 </html>
-
-<!--
-Евгения Андреева закончила университет с специальностью по вычислительной математике и кибернетике, а потом пошла на аспирантуру в тот же университет. Она имеет степень кандидата физико-математических наук. Она полностью посвятила свою жизнь преподаванию информатики и разработке методик для этого. Она руководит кафедрой информатики в СУНЦ МГУ и написала несколько учебников по информатике. Она также часто была членом жюри на олимпиадах по информатике на разных уровнях. Евгения также является главным тренером сборной команды Москвы по информатике и основала специальный курс «Олимпиадная информатика» в СУНЦ МГУ.
-Свой первый опыт преподавания она получила еще на третьем курсе университета, когда работала преподавателем программирования в вечерней математической школе. Эта работа определила ее дальнейшую карьеру. В 1989 году, когда факультету ВМиК поручили организовать преподавание информатики в интернате имени Колмогорова, Евгения с радостью согласилась помочь. С тех пор ее работа связана с одаренными школьниками.
-Под ее руководством в СУНЦ МГУ был создан электронный задачник по программированию, который помогает эффективно обучать программированию и готовить к соревнованиям. Она также разработала методику использования этого задачника, которая позволяет учителям вести занятия на более высоком уровне.
-Евгения разработала методику подготовки школьников, которые хотят изучать информатику на самом высоком уровне, и она дает хорошие результаты. Многие ее ученики становились победителями олимпиад на всероссийском и международном уровнях. 
-Она была награждена медалью «За вклад в реализацию государственной политики в области образования» Министерством науки и высшего образования Российской Федерации.
--->
