--- a/about-us.html
+++ b/about-us.html
@@ -25,10 +25,10 @@
         <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
     <div class="element bio">
-        <img src="static/img/semen.jpg" class="disp"/>
+        <img src="static/img/alcabel.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Константин Белоусько</h2>
-            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35)</i></p>
+            <p><i>Характер срытный. Не женат.</i></p>
         </div>
     </div>
     <div class="element bio">
