--- a/about-us.html
+++ b/about-us.html
@@ -28,7 +28,7 @@
         <img src="static/img/alcabel.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Константин Белоусько</h2>
-            <p><i>Характер срытный. Не женат.</i></p>
+            <p><i>Характер скрытный. Не женат.</i></p>
         </div>
     </div>
     <div class="element bio">
@@ -42,7 +42,14 @@
         <img src="static/img/semen.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Семён Кухаренко</h2>
-            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35)</i></p>
+            <p><i>Здесь могла бы быть реклама Вашего пылесоса (8 800 555 35 35).</i></p>
+        </div>
+    </div>
+    <div class="element bio">
+        <img src="static/img/ivanbel.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>Иван Белозёров</h2>
+            <p><i>Дизайнер. Единственный, кто что-то делал.</i></p>
         </div>
     </div>
     <footer class="footer">
