--- a/personalities.html
+++ b/personalities.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Спортивное программирование или жизнь</title>
-    <link rel="shortcut icon" href="static/img/KIS.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="static/img/KIS.svg" type="image/x-icon"/>
     <link rel="stylesheet" href="static/css/main.css"/>
     <link rel="stylesheet" href="static/css/hist1.css"/>
+    <link rel="stylesheet" href="static/css/personalities.css"/>
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/sf-pro-display');</style>
+    
 </head>
 <body>
     <div class="overlay" id="overlay">
@@ -24,7 +28,10 @@
         <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
         <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
-    <p1>Link to person 1 and person 2</p1>
+    <div class="wrap">
+        <div class="element">aboba</div>
+        <div class="element">huyoba</div>
+    </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
