--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="static/img/KIS.svg" type="image/x-icon" />
     <link rel="stylesheet" href="static/css/main.css"/>
     <link rel="stylesheet" href="static/css/hist1.css"/>
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/sf-pro-display');</style>
 </head>
 <body>
     <div class="overlay" id="overlay">
