--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <title>Спортивное программирование или жизнь</title>
     <link rel="shortcut icon" href="static/img/KIS.svg" type="image/x-icon" />
     <link rel="stylesheet" href="static/css/main.css"/>
+    <link href="https://fonts.cdnfonts.com/css/sf-pro-display" rel="stylesheet">
+    <style>@import url('https://fonts.cdnfonts.com/css/sf-pro-display');</style>
 </head>
 <body>
     <div class="overlay" id="overlay">
