--- a/cp.html
+++ b/cp.html
@@ -32,7 +32,7 @@
         <p>Спортивное программирование учит решать задачки, которые очень часто спрашивают на собеседованиях в различных IT-компаниях. Все компании хотят получить людей, кто не просто знает определенный framework или язык, а умеет думать.</p>
     </div>
     <div class="element">
-        <h2>Этап развития США(спортивного программирования) в России</h2>
+        <h2>Этапы развития <del>США</del> спортивного программирования в России</h2>
         <p>Существует не так много областей человеческой деятельности, где Россия (или ваш ВУЗ) впереди планеты всей. Если у вас получается внести свой вклад в значимые достижение страны (города, ВУЗа), то это, в самом деле, почетно и заслуживает уважения. Когда мои воспитанники поднимаются на сцену получить заслуженные призы, я по-настоящему ощущаю, что такое патриотизм. И всех тех, кто приносит славу стране, я считаю патриотами. Такие победы несомненно важны — они создают тот положительный имидж, без которого сложнее сотрудничать, привлекать инвестиции, показывать потенциал региона.</p>
     </div>
     <div class="element">
