--- a/purpose.html
+++ b/purpose.html
@@ -26,7 +26,21 @@
         <a href="about-us.html"><span class="nav-el hli">О нас</span></a>
         <a href="faq.html"><span class="nav-el hli">Контакты</span></a>
     </nav>
-    <p1>Нахуй всё это надо</p1>
+    <div class="element bio">
+        <img src="static/img/aesc.jpg" class="disp"/>
+        <div class="bio-text">
+            <h2>СУНЦ МГУ на ВсОШ по информатике 2024</h2>
+            <p><i>Лучшая школа страны.</i></p>
+        </div>
+    </div>
+    <div class="element">
+        <p>Спортивное программирование является ценным ресурсом для тех, кто стремится пройти успешное собеседование в IT-компании. Знание алгоритмов, структур данных и оптимизации кода, которые широко применяются в соревновательном программировании, помогает кандидатам проявить свои навыки и знания во время интервью. Решение сложных задач на соревнованиях тренирует аналитическое мышление и способность быстро находить оптимальные решения, что делает спортивных программистов желанными кандидатами для многих компаний.</p>
+        <p>В целом, спортивное программирование не только помогает в подготовке к карьере в IT-индустрии, но и развивает навыки, которые могут быть полезны в различных областях и повседневной жизни. Оно способствует развитию аналитического мышления, эффективности и способности к творческому мышлению, что делает его ценным инструментом для личного и профессионального роста.</p>
+    </div>
+    <div class="element">    
+        <p>Владение навыками спортивного программирования также открывает двери к решению интересных оптимизационных задач. От простых алгоритмических задач до сложных оптимизаций в больших системах, спортивные программисты могут эффективно применять свои навыки для повышения производительности и эффективности программного обеспечения. Такие навыки востребованы в различных областях, включая финансы, логистику, науку и многие другие.</p>
+        <p>Благодаря участию в соревнованиях по программированию, люди получают опыт работы с реальными данными и задачами, что делает их более подготовленными к решению сложных проблем в реальном мире. Этот опыт также способствует развитию командной работы, так как многие соревнования проводятся в командном формате, где участники должны эффективно сотрудничать для достижения общей цели.</p>
+    </div>
     <footer class="footer">
         <span class="hli">© Copyright 2023-24 AESC MSU</span>
     </footer>
