--- a/about-us.html
+++ b/about-us.html
@@ -51,7 +51,7 @@
         <img src="static/img/ivanbel.jpg" class="disp"/>
         <div class="bio-text">
             <h2>Иван Белозёров</h2>
-            <p><i>Сперва Inter освой</i></p>
+            <p><i>Запомни: всего одна правка — и ты поправишься.</i></p>
         </div>
     </div>
     <footer class="footer">
