--- a/cp-platforms.html
+++ b/cp-platforms.html
@@ -52,7 +52,7 @@
     <div class="element bio" class="disp">
         <img src="static/img/leetcode.svg"/>
         <div class="bio-text">
-            <h2><a href="leetcode.com">Leetcode</a></h2>
+            <h2><a href="https://leetcode.com">Leetcode</a></h2>
             <p>LeetCode — платформа для технических навыков и подготовки к собеседованию, которую студенты, профессиональные программисты и работодатели используют для изучения, практики и оценки навыков кодирования и программирования.</p>
         </div>
     </div>
